[package]
name = "chip_oxide"
version = "0.1.1"
edition = "2021"
authors = ["IsotoxalDev"]
license = "MIT"
description = "Create chip 8 emulators for any backend!"
repository = "https://github.com/IsotoxalDev/ChipOxide"
keywords = ["Emulator", "Chip8", "Emulation"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.25.0"
log = "0.4.17"
rand = "0.8.5"

[[example]]
name = "terminal"
